--- a/stock_subscriber/stock_subscriber/config/conf.py.sample
+++ b/stock_subscriber/stock_subscriber/config/conf.py.sample
@@ -10,8 +10,8 @@ SQLALCHEMY_DATABASE_CONNECTION = os.environ.get('DB_CONNECTION')
 SQLALCHEMY_DATABASE_URL = f"{SQLALCHEMY_DATABASE_CONNECTION}://{SQLALCHEMY_DATABASE_USERNAME}:{SQLALCHEMY_DATABASE_PASSWORD}@{SQLALCHEMY_DATABASE_HOST}:{SQLALCHEMY_DATABASE_PORT}/{SQLALCHEMY_DATABASE_NAME}"
 
 SMS_LOGIN = {
-    'user': 'FILL',
-    'pass': 'FILL'
+    'user': int,
+    'pass': ''
 }
 
-SMS_SERVER = 'FILL'
+SMS_SERVER = ''
