--- a/stock_subscriber/requirements.txt
+++ b/stock_subscriber/requirements.txt
@@ -16,3 +16,7 @@ fastapi==0.55.1
 SQLAlchemy==1.3.17
 fastapi-utils==0.2.1
 lxml==4.5.1
+PyJWT==1.7.1
+passlib==1.7.2
+bcrypt==3.1.7
+python-multipart
