added stock front

--- a/stock_subscriber/stock_subscriber/config/conf.py.sample
+++ b/stock_subscriber/stock_subscriber/config/conf.py.sample
@@ -15,3 +15,8 @@ SMS_LOGIN = {
 }
 
 SMS_SERVER = ''
+
+ACCESS_TOKEN_EXPIRE_MINUTES = 60 * 24 * 3
+
+ADMIN_USERNAME = 'super'
+ADMIN_PASSWORD = 'super_upper'
