--- a/stock_subscriber/Dockerfile
+++ b/stock_subscriber/Dockerfile
@@ -5,6 +5,8 @@ WORKDIR /stock_subscriber
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+RUN pip3 install pandas uvloop lxml bcrypt
+
 COPY ./requirements.txt .
 
 RUN pip3 install -r /stock_subscriber/requirements.txt
